# Commonplace-time-boxed-trust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  deploy-preview.yml  deploy.yml
contracts/library-registry/: Cargo.toml
contracts/library-registry/src/: lib.rs  test.rs
contracts/steward-reputation/: Cargo.toml
contracts/steward-reputation/src/: lib.rs  test.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SUBMISSION_CHECKLIST.md
frontend/: .env.example  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActivityLog.tsx  Header.tsx  Hero.tsx  ListBookModal.tsx  ListingCard.tsx  ListingCardSkeleton.tsx  ListingGrid.tsx  RegisterBoxModal.tsx  ReputationPanel.tsx  StatusBadge.test.tsx  StatusBadge.tsx  Toast.tsx
frontend/src/hooks/: useActivityFeed.ts  useBalance.ts  useBoxes.ts  useListings.ts  useWallet.ts
frontend/src/lib/: config.ts  format.test.ts  format.ts  soroban.ts  types.ts  wallet.ts
scripts/: build.sh  deploy_testnet.sh
