[package]
name = "library-registry"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
steward-reputation = { path = "../steward-reputation", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
